[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyvii"
version = "0.0.5"
authors = [
  { name="Peter Taiwo", email="taiwop3@gmail.com" },
]
description = "Python http request payload validator"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Peter2962/pyvii"
"Bug Tracker" = "https://github.com/Peter2962/pyvii/issues"